# reactos

./: README.md
base/applications/charmap/: about.c  charmap.c  lrgcell.c  map.c  settings.c
base/applications/charmap_new/: Cell.cpp  GridView.cpp  MainWindow.cpp  charmap.cpp
base/applications/dxdiag/: d3dtest.c  d3dtest7.c  d3dtest8.c  d3dtest9.c  ddtest.c  display.c  dxdiag.c  help.c  input.c  music.c  network.c  sound.c  system.c
base/applications/fltmc/: fltmc.cpp
base/applications/logoff/: logoff.c
base/applications/msconfig/: freeldrpage.c  generalpage.c  msconfig.c  srvpage.c  startuppage.c  systempage.c  toolspage.c
base/applications/msconfig_new/: fileextractdialog.c  fileextractdialog.h  fileutils.c  fileutils.h  freeldrpage.c  freeldrpage.h  generalpage.c  generalpage.h  msconfig.c  srvpage.cpp  startuppage.c  stringutils.c  stringutils.h  systempage.c  utils.c  (+7 more)
boot/armllb/: boot.s  crtsupp.c  envir.c  fw.c  main.c
dll/win32/comctl32/: CMakeLists.txt  animate.c  animate.cpp  button.c  button.cpp  button.h  combo.c  combo.cpp  comboex.c  comboex.cpp  comctl32.c  comctl32.cpp  comctl32.h  comctl32.rc  comctl32_undoc.c  comctl32undoc.c  commctrl.c.OLD  datetime.c  datetime.cpp  dpa.c  dpa.cpp  draglist.c  draglist.cpp  dsa.c  dsa.cpp  edit.c  edit.cpp  flatsb.c  flatsb.cpp  header.c  header.cpp  header.h  hotkey.c  hotkey.cpp  imagelist.c  ipaddress.c  ipaddress.cpp  listbox.c  listbox.cpp  listview.c  (+40 more)
dll/win32/comctl32/controls/animate/: animate.cpp
dll/win32/comctl32/controls/button/: button.c  button.h
dll/win32/comctl32/controls/datetime/: datetime.cpp  datetime.h
dll/win32/comctl32/controls/draglist/: draglist.cpp
dll/win32/comctl32/controls/flatsb/: flatsb.cpp
dll/win32/comctl32/controls/header/: header.cpp
dll/win32/comctl32/controls/hotkey/: hotkey.cpp
dll/win32/comctl32/controls/imagelist/: imagelist.c
dll/win32/comctl32/controls/listbox/: listbox.h
dll/win32/comctl32/controls/listview/: listview.cpp  listview.h  utils.cpp  utils.h
dll/win32/comctl32/controls/monthcal/: monthcal.cpp  monthcal.h
dll/win32/comctl32/controls/nativefont/: nativefont.cpp
dll/win32/comctl32/controls/pager/: pager.cpp
dll/win32/comctl32/controls/progress/: progress.cpp
dll/win32/comctl32/controls/propsheet/: propsheet.cpp  propsheet.h
dll/win32/comctl32/controls/rebar/: rebar.cpp  rebar.h
dll/win32/comctl32/controls/static/: static.cpp
dll/win32/comctl32/controls/syslink/: syslink.cpp  syslink.h
dll/win32/comctl32/controls/tab/: tab.h
dll/win32/comctl32/controls/taskdialog/: taskdialog.cpp
dll/win32/comctl32/controls/toolbar/: toolbar.cpp
dll/win32/comctl32/controls/tooltips/: tooltips.cpp  tooltips.h
dll/win32/comctl32/controls/trackbar/: trackbar.h
dll/win32/comctl32/controls/treeview/: treeview.cpp  treeview.h
dll/win32/comctl32/controls/updown/: updown.cpp  updown.h
dll/win32/comctl32/lang/: bg-BG.rc  cs-Cz.rc  da-DK.rc  de-DE.rc  el-GR.rc  en-US.rc  eo-AA.rc  es-ES.rc  et-EE.rc  eu-ES.rc  fr-FR.rc  he-IL.rc  hi-IN.rc  hr-HR.rc  hu-HU.rc  id-ID.rc  it-IT.rc  ja-JP.rc  ko-KR.rc  lt-LT.rc  nl-NL.rc  no-NO.rc  pl-PL.rc  pt-PT.rc  ro-RO.rc  ru-RU.rc  sk-SK.rc  sl-SI.rc  sq-AL.rc  sr-SP.rc  sv-SE.rc  th-TH.rc  tr-TR.rc  uk-UA.rc  zh-CN.rc  zh-TW.rc
dll/win32/comctl32/utils/: comctl32_undoc.cpp  debug.cpp  dpa.cpp  dsa.cpp  smoothscroll.cpp  string.cpp  stubs.cpp  theme_scrollbar.cpp  theming.cpp
docs/: CREDITS.md
drivers/wmi/: wmilib.c
ntoskrnl/: ntoskrnl.rc
ntoskrnl/cache/: cachesub.c  copysup.c  fssup.c  lazyrite.c  logsup.c  mdlsup.c  pinsup.c
ntoskrnl/cc/: cacheman.c  copy.c  fs.c  lazywrite.c  mdl.c  pin.c  view.c
ntoskrnl/config/: cmalloc.c  cmapi.c  cmboot.c  cmconfig.c  cmcontrl.c  cmdata.c  cmdelay.c  cmhook.c  cmhvlist.c  cminit.c  cmkcbncb.c  cmlazy.c  cmmapvw.c  cmnotify.c  cmparse.c  cmquota.c  cmse.c  cmsecach.c  cmsysini.c  cmvalche.c  cmwraprs.c  ntapi.c
ntoskrnl/dbgk/: dbgkobj.c  dbgkutil.c
ntoskrnl/ex/: atom.c  callback.c  dbgctrl.c  efi.c  event.c  evtpair.c  exintrin.c  fmutex.c  handle.c  harderr.c  hdlsterm.c  init.c  interlocked.c  keyedevt.c  locale.c  lookas.c  mutant.c  profile.c  pushlock.c  resource.c  rundown.c  sem.c  shutdown.c  sysinfo.c  time.c  timer.c  uuid.c  win32k.c  work.c  xipdisp.c  zone.c
ntoskrnl/fsrtl/: dbcsname.c  fastio.c  faulttol.c  filelock.c  filter.c  filtrctx.c  fsfilter.c  fsrtlpc.c  largemcb.c  mcb.c  name.c  notify.c  oplock.c  pnp.c  stackovf.c  tunnel.c  unc.c
ntoskrnl/fstub/: disksup.c  fstubex.c  halstub.c  translate.c
ntoskrnl/inbv/: inbv.c  inbvport.c
ntoskrnl/include/: ntoskrnl.h
ntoskrnl/kd/: kdio.c
ntoskrnl/kd64/: kdapi.c  kdbreak.c  kddata.c  kdinit.c  kdlock.c  kdprint.c  kdtrap.c
ntoskrnl/kdbg/: kdb.c  kdb_symbols.c
ntoskrnl/ke/: apc.c  balmgr.c  bug.c  clock.c  config.c  devqueue.c  dpc.c  eventobj.c  except.c  freeze.c  gate.c  gmutex.c  ipi.c  krnlinit.c  mutex.c  procobj.c  profobj.c  queue.c  semphobj.c  spinlock.c  thrdobj.c  thrdschd.c  time.c  timerobj.c  wait.c
ntoskrnl/lpc/: close.c  complete.c  connect.c  create.c  listen.c  port.c  reply.c  send.c
ntoskrnl/mm/: balance.c  freelist.c  mminit.c  region.c  shutdown.c
ntoskrnl/ob/: devicemap.c  obdir.c  obhandle.c  obinit.c  oblife.c  oblink.c  obname.c  obref.c  obsdcach.c  obsecure.c  obwait.c
ntoskrnl/po/: events.c  poshtdwn.c  povolume.c  power.c
ntoskrnl/ps/: apphelp.c  debug.c  job.c  kill.c  process.c  psmgr.c  psnotify.c  query.c  security.c  state.c  thread.c  win32.c
ntoskrnl/rtl/: libsupp.c  misc.c
ntoskrnl/tests/: setup.c
ntoskrnl/vdm/: vdmexec.c  vdmmain.c
ntoskrnl/vf/: driver.c
ntoskrnl/wmi/: guidobj.c  smbios.c  wmi.c  wmidrv.c
sdk/tools/: bin2c.c
win32ss/: napi.h  pch.h  win32kp.h
win32ss/include/: ntgdihdl.h  ntgdityp.h  ntusrtyp.h
(+3249 files in other folders)
